[project]
name = "medinsightai"
version = "0.1.0"
description = "Student-friendly medical RAG chatbot built with Streamlit, FAISS, ONNX embeddings, and Groq."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "streamlit==1.46.1",
    "langchain-core==0.3.68",
    "langchain-community==0.3.27",
    "langchain-text-splitters==0.3.8",
    "langchain-groq==0.3.5",
    "groq==0.29.0",
    "faiss-cpu==1.11.0",
    "onnxruntime==1.22.0",
    "tokenizers==0.21.2",
    "numpy==2.2.6",
    "huggingface-hub==0.33.2",
    "pypdf==5.7.0",
    "python-dotenv==1.1.1",
]
