[project]
name = "medinsightai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu==1.9.0.post1",
    "groq==0.29.0",
    "huggingface-hub==0.33.2",
    "langchain-community==0.3.27",
    "langchain-core==0.3.68",
    "langchain-groq==0.3.5",
    "langchain-text-splitters==0.3.8",
    "numpy==2.2.6",
    "onnxruntime==1.22.0",
    "pypdf==5.7.0",
    "python-dotenv==1.1.1",
    "streamlit==1.46.1",
    "tokenizers==0.21.2",
]
